[package]
name = "hatty"
version = "1.0.0"
authors = ["Jesse Cooke <jesse@relativepath.io>"]
edition = "2018"
description = "Simple CLI to wake-on-LAN"
license-file = "LICENSE"
homepage = "https://github.com/jc00ke/hatty"
repository = "https://github.com/jc00ke/hatty"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
macaddr = "1.0.1"
